--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
 	</parent>
 
 		<groupId>noneGroupId</groupId>
-		<artifactId>cell_tracking_</artifactId>
-		<version>0.0.0-SNAPSHOT</version>
+		<artifactId>Cell_Tracking</artifactId>
+		<version>0.0.0</version>
 
 	<name>Cell tracking</name>
 	<description>A project implementing imageJ plugin for cell tracking</description>
