--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -5,4 +5,4 @@
 # If something like ("<arg>") is appended to the class name, the setup() method
 # will get that as arg parameter; otherwise arg is simply the empty string.
 
-Plugins, "Cell Tracking (Alex)", cell_tracking.CellTracker_
+Plugins, "Cell Tracking", cellTracking.Cell_Tracker
