--- a/pom.xml
+++ b/pom.xml
@@ -74,11 +74,31 @@
 		<license.licenseName>bsd_2</license.licenseName>
 		<license.copyrightOwners>Romashka, Inc.</license.copyrightOwners>
 	</properties>
-
+	
 	<dependencies>
 		<dependency>
 			<groupId>net.imagej</groupId>
 			<artifactId>ij</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+				<dependency>      
+			<groupId>org.deeplearning4j</groupId>      
+			<artifactId>deeplearning4j-core</artifactId>
+			<version>1.0.0-beta4</version>    
+		</dependency>         
+		<dependency>      
+			<groupId>org.deeplearning4j</groupId>      
+			<artifactId>deeplearning4j-modelimport</artifactId>      
+			<version>1.0.0-beta4</version>    
+		</dependency> 
+		<dependency>
+			<groupId>org.nd4j</groupId>
+			<artifactId>nd4j-native</artifactId>
+			<version>1.0.0-beta4</version>
 		</dependency>
 	</dependencies>
 </project>
